tests/errors/errors_free_after_initialized.c
#include <stdio.h>
#include <stdlib.h>
#include "../../src/errors/errors.h"

int main(int argc, char *argv[]) {
    init_error_queue();
    free_error_queue();
    return EXIT_SUCCESS;
}